Vinculos con las validaciones

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Formulario</title>
 </head>
 <body>
-	<form action="#" method="post">
+	<form action="php/validaciones.php" method="post">
   <table width="25%" align="center">
     <tr>
       <td>Nombre:</td>
