Insersion en la bases de datos

--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
 	<title>Formulario</title>
 </head>
 <body>
-	<form action="php/validaciones.php" method="post">
+	<form name=insert action="php/validaciones.php" method="post">
   <table width="25%" align="center">
     <tr>
       <td>Nombre:</td>
       <td><label for="nom_usuario"></label>
-      <input type="text" name="txt_nombre" ></td>
+      <input type="text" name="txtnombre" ></td>
     </tr>
     <tr>
       <td>Apellido:</td>
       <td><label for="ape_usuario"></label>
-      <input type="text" name="txt_apellidos"></td>
+      <input type="text" name="txtapellidos"></td>
     </tr>
     <tr>
     </tr>
    		 <tr>
       <td>Direccion:</td>
       <td><label for="dir_usuario"></label>
-      <input type="text" name="txt_direccion"></td>
+      <input type="text" name="txtdireccion"></td>
     </tr>
      <tr>
       <td>Telefono:</td>
       <td><label for="tel_usuario"></label>
-      <input type="text" name="txt_telefono"></td>
+      <input type="text" name="txttelefono"></td>
     </tr>
     <tr>
       <td colspan="2" align="center"><input type="submit" name="guardar" value="Aceptar"></td>
