se modifico a mayusculas el titulo del index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Formulario</title>
+	<title>FORMULARIO COMPLETO</title>
 </head>
 <body>
 	<form name=insert action="php/validaciones.php" method="post">
